[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/overworld/opponent_01.png" type="Texture" id=1]
[ext_resource path="res://scripts/entities/Opponent.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 48.8907

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 4 )

[node name="Opponent" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -9 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -43.0
margin_top = -48.0
margin_right = 41.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pushbox" type="Area2D" parent="." groups=[
"Pushbox",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pushbox"]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="area_entered" from="Pushbox" to="." method="_on_Pushbox_area_entered"]
[connection signal="area_exited" from="Pushbox" to="." method="_on_Pushbox_area_exited"]
